--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "cfn-coacalco",
-  "version": "0.1.0",
-  "homepage": "https://demo.cfn.org.mx",
+  "version": "0.1.1",
+  "homepage": "https://cfn.org.mx",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
